using System;
using UnityEditor.Build.Reporting;
using UnityEngine;

namespace Sample.Builder.Sample1
{
    public class BuilderSample1 : MonoBehaviour
    {
        private void Start()
        {
            VehicleBuilder builder;

            Shop shop = new Shop();

            builder = new ScooterBuilder();
            shop.Construct(builder);
            builder.Vehicle.Show();

            builder = new CarBuilder();
            shop.Construct(builder);
            builder.Vehicle.Show();

            builder = new MotorCycleBuilder();
            shop.Construct(builder);
            builder.Vehicle.Show();
        }
    }
}